qt/gen_qvalidator.h

typedef struct QChildEvent QChildEvent;
typedef struct QDoubleValidator QDoubleValidator;
typedef struct QEvent QEvent;
typedef struct QIntValidator QIntValidator;
typedef struct QLocale QLocale;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTimerEvent QTimerEvent;
typedef struct QValidator QValidator;
QValidator* QValidator_new();
QValidator* QValidator_new2(QObject* parent);
QMetaObject* QValidator_metaObject(const QValidator* self);
void* QValidator_metacast(QValidator* self, const char* param1);
int QValidator_metacall(QValidator* self, int param1, int param2, void** param3);
struct miqt_string QValidator_tr(const char* s);
struct miqt_string QValidator_trUtf8(const char* s);
void QValidator_setLocale(QValidator* self, QLocale* locale);
QLocale* QValidator_locale(const QValidator* self);
int QValidator_validate(const QValidator* self, struct miqt_string param1, int* param2);
void QValidator_fixup(const QValidator* self, struct miqt_string param1);
void QValidator_changed(QValidator* self);
void QValidator_connect_changed(QValidator* self, intptr_t slot);
struct miqt_string QValidator_tr2(const char* s, const char* c);
struct miqt_string QValidator_tr3(const char* s, const char* c, int n);
struct miqt_string QValidator_trUtf82(const char* s, const char* c);
struct miqt_string QValidator_trUtf83(const char* s, const char* c, int n);
bool QValidator_override_virtual_metacall(void* self, intptr_t slot);
int QValidator_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QValidator_override_virtual_validate(void* self, intptr_t slot);
bool QValidator_override_virtual_fixup(void* self, intptr_t slot);
void QValidator_virtualbase_fixup(const void* self, struct miqt_string param1);
bool QValidator_override_virtual_event(void* self, intptr_t slot);
bool QValidator_virtualbase_event(void* self, QEvent* event);
bool QValidator_override_virtual_eventFilter(void* self, intptr_t slot);
bool QValidator_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QValidator_override_virtual_timerEvent(void* self, intptr_t slot);
void QValidator_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QValidator_override_virtual_childEvent(void* self, intptr_t slot);
void QValidator_virtualbase_childEvent(void* self, QChildEvent* event);
bool QValidator_override_virtual_customEvent(void* self, intptr_t slot);
void QValidator_virtualbase_customEvent(void* self, QEvent* event);
bool QValidator_override_virtual_connectNotify(void* self, intptr_t slot);
void QValidator_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QValidator_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QValidator_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QValidator_delete(QValidator* self);
QIntValidator* QIntValidator_new();
QIntValidator* QIntValidator_new2(int bottom, int top);
QIntValidator* QIntValidator_new3(QObject* parent);
QIntValidator* QIntValidator_new4(int bottom, int top, QObject* parent);
QMetaObject* QIntValidator_metaObject(const QIntValidator* self);
void* QIntValidator_metacast(QIntValidator* self, const char* param1);
int QIntValidator_metacall(QIntValidator* self, int param1, int param2, void** param3);
struct miqt_string QIntValidator_tr(const char* s);
struct miqt_string QIntValidator_trUtf8(const char* s);
int QIntValidator_validate(const QIntValidator* self, struct miqt_string param1, int* param2);
void QIntValidator_fixup(const QIntValidator* self, struct miqt_string input);
void QIntValidator_setBottom(QIntValidator* self, int bottom);
void QIntValidator_setTop(QIntValidator* self, int top);
void QIntValidator_setRange(QIntValidator* self, int bottom, int top);
int QIntValidator_bottom(const QIntValidator* self);
int QIntValidator_top(const QIntValidator* self);
void QIntValidator_bottomChanged(QIntValidator* self, int bottom);
void QIntValidator_connect_bottomChanged(QIntValidator* self, intptr_t slot);
void QIntValidator_topChanged(QIntValidator* self, int top);
void QIntValidator_connect_topChanged(QIntValidator* self, intptr_t slot);
struct miqt_string QIntValidator_tr2(const char* s, const char* c);
struct miqt_string QIntValidator_tr3(const char* s, const char* c, int n);
struct miqt_string QIntValidator_trUtf82(const char* s, const char* c);
struct miqt_string QIntValidator_trUtf83(const char* s, const char* c, int n);
bool QIntValidator_override_virtual_metacall(void* self, intptr_t slot);
int QIntValidator_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QIntValidator_override_virtual_validate(void* self, intptr_t slot);
int QIntValidator_virtualbase_validate(const void* self, struct miqt_string param1, int* param2);
bool QIntValidator_override_virtual_fixup(void* self, intptr_t slot);
void QIntValidator_virtualbase_fixup(const void* self, struct miqt_string input);
bool QIntValidator_override_virtual_setRange(void* self, intptr_t slot);
void QIntValidator_virtualbase_setRange(void* self, int bottom, int top);
bool QIntValidator_override_virtual_event(void* self, intptr_t slot);
bool QIntValidator_virtualbase_event(void* self, QEvent* event);
bool QIntValidator_override_virtual_eventFilter(void* self, intptr_t slot);
bool QIntValidator_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QIntValidator_override_virtual_timerEvent(void* self, intptr_t slot);
void QIntValidator_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QIntValidator_override_virtual_childEvent(void* self, intptr_t slot);
void QIntValidator_virtualbase_childEvent(void* self, QChildEvent* event);
bool QIntValidator_override_virtual_customEvent(void* self, intptr_t slot);
void QIntValidator_virtualbase_customEvent(void* self, QEvent* event);
bool QIntValidator_override_virtual_connectNotify(void* self, intptr_t slot);
void QIntValidator_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QIntValidator_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QIntValidator_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QIntValidator_delete(QIntValidator* self);
QDoubleValidator* QDoubleValidator_new();
QDoubleValidator* QDoubleValidator_new2(double bottom, double top, int decimals);
QDoubleValidator* QDoubleValidator_new3(QObject* parent);
QDoubleValidator* QDoubleValidator_new4(double bottom, double top, int decimals, QObject* parent);
QMetaObject* QDoubleValidator_metaObject(const QDoubleValidator* self);
void* QDoubleValidator_metacast(QDoubleValidator* self, const char* param1);
int QDoubleValidator_metacall(QDoubleValidator* self, int param1, int param2, void** param3);
struct miqt_string QDoubleValidator_tr(const char* s);
struct miqt_string QDoubleValidator_trUtf8(const char* s);
int QDoubleValidator_validate(const QDoubleValidator* self, struct miqt_string param1, int* param2);
void QDoubleValidator_setRange(QDoubleValidator* self, double bottom, double top, int decimals);
void QDoubleValidator_setBottom(QDoubleValidator* self, double bottom);
void QDoubleValidator_setTop(QDoubleValidator* self, double top);
void QDoubleValidator_setDecimals(QDoubleValidator* self, int decimals);
void QDoubleValidator_setNotation(QDoubleValidator* self, int notation);
double QDoubleValidator_bottom(const QDoubleValidator* self);
double QDoubleValidator_top(const QDoubleValidator* self);
int QDoubleValidator_decimals(const QDoubleValidator* self);
int QDoubleValidator_notation(const QDoubleValidator* self);