qt/gen_qvalidator.nim


proc fcQValidator_new(): ptr cQValidator {.importc: "QValidator_new".}
proc fcQValidator_new2(parent: pointer): ptr cQValidator {.importc: "QValidator_new2".}
proc fcQValidator_metaObject(self: pointer, ): pointer {.importc: "QValidator_metaObject".}
proc fcQValidator_metacast(self: pointer, param1: cstring): pointer {.importc: "QValidator_metacast".}
proc fcQValidator_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QValidator_metacall".}
proc fcQValidator_tr(s: cstring): struct_miqt_string {.importc: "QValidator_tr".}
proc fcQValidator_trUtf8(s: cstring): struct_miqt_string {.importc: "QValidator_trUtf8".}
proc fcQValidator_setLocale(self: pointer, locale: pointer): void {.importc: "QValidator_setLocale".}
proc fcQValidator_locale(self: pointer, ): pointer {.importc: "QValidator_locale".}
proc fcQValidator_validate(self: pointer, param1: struct_miqt_string, param2: ptr cint): cint {.importc: "QValidator_validate".}
proc fcQValidator_fixup(self: pointer, param1: struct_miqt_string): void {.importc: "QValidator_fixup".}
proc fcQValidator_changed(self: pointer, ): void {.importc: "QValidator_changed".}
proc fQValidator_connect_changed(self: pointer, slot: int) {.importc: "QValidator_connect_changed".}
proc fcQValidator_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QValidator_tr2".}
proc fcQValidator_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QValidator_tr3".}
proc fcQValidator_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QValidator_trUtf82".}
proc fcQValidator_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QValidator_trUtf83".}
proc fQValidator_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QValidator_virtualbase_metacall".}
proc fcQValidator_override_virtual_metacall(self: pointer, slot: int) {.importc: "QValidator_override_virtual_metacall".}
proc fcQValidator_override_virtual_validate(self: pointer, slot: int) {.importc: "QValidator_override_virtual_validate".}
proc fQValidator_virtualbase_fixup(self: pointer, param1: struct_miqt_string): void{.importc: "QValidator_virtualbase_fixup".}
proc fcQValidator_override_virtual_fixup(self: pointer, slot: int) {.importc: "QValidator_override_virtual_fixup".}
proc fQValidator_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QValidator_virtualbase_event".}
proc fcQValidator_override_virtual_event(self: pointer, slot: int) {.importc: "QValidator_override_virtual_event".}
proc fQValidator_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QValidator_virtualbase_eventFilter".}
proc fcQValidator_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QValidator_override_virtual_eventFilter".}
proc fQValidator_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QValidator_virtualbase_timerEvent".}
proc fcQValidator_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QValidator_override_virtual_timerEvent".}
proc fQValidator_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QValidator_virtualbase_childEvent".}
proc fcQValidator_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QValidator_override_virtual_childEvent".}
proc fQValidator_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QValidator_virtualbase_customEvent".}
proc fcQValidator_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QValidator_override_virtual_customEvent".}
proc fQValidator_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QValidator_virtualbase_connectNotify".}
proc fcQValidator_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QValidator_override_virtual_connectNotify".}
proc fQValidator_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QValidator_virtualbase_disconnectNotify".}
proc fcQValidator_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QValidator_override_virtual_disconnectNotify".}
proc fcQValidator_delete(self: pointer) {.importc: "QValidator_delete".}
proc fcQIntValidator_new(): ptr cQIntValidator {.importc: "QIntValidator_new".}
proc fcQIntValidator_new2(bottom: cint, top: cint): ptr cQIntValidator {.importc: "QIntValidator_new2".}
proc fcQIntValidator_new3(parent: pointer): ptr cQIntValidator {.importc: "QIntValidator_new3".}
proc fcQIntValidator_new4(bottom: cint, top: cint, parent: pointer): ptr cQIntValidator {.importc: "QIntValidator_new4".}
proc fcQIntValidator_metaObject(self: pointer, ): pointer {.importc: "QIntValidator_metaObject".}
proc fcQIntValidator_metacast(self: pointer, param1: cstring): pointer {.importc: "QIntValidator_metacast".}
proc fcQIntValidator_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QIntValidator_metacall".}
proc fcQIntValidator_tr(s: cstring): struct_miqt_string {.importc: "QIntValidator_tr".}
proc fcQIntValidator_trUtf8(s: cstring): struct_miqt_string {.importc: "QIntValidator_trUtf8".}
proc fcQIntValidator_validate(self: pointer, param1: struct_miqt_string, param2: ptr cint): cint {.importc: "QIntValidator_validate".}
proc fcQIntValidator_fixup(self: pointer, input: struct_miqt_string): void {.importc: "QIntValidator_fixup".}
proc fcQIntValidator_setBottom(self: pointer, bottom: cint): void {.importc: "QIntValidator_setBottom".}
proc fcQIntValidator_setTop(self: pointer, top: cint): void {.importc: "QIntValidator_setTop".}
proc fcQIntValidator_setRange(self: pointer, bottom: cint, top: cint): void {.importc: "QIntValidator_setRange".}
proc fcQIntValidator_bottom(self: pointer, ): cint {.importc: "QIntValidator_bottom".}
proc fcQIntValidator_top(self: pointer, ): cint {.importc: "QIntValidator_top".}
proc fcQIntValidator_bottomChanged(self: pointer, bottom: cint): void {.importc: "QIntValidator_bottomChanged".}
proc fQIntValidator_connect_bottomChanged(self: pointer, slot: int) {.importc: "QIntValidator_connect_bottomChanged".}
proc fcQIntValidator_topChanged(self: pointer, top: cint): void {.importc: "QIntValidator_topChanged".}
proc fQIntValidator_connect_topChanged(self: pointer, slot: int) {.importc: "QIntValidator_connect_topChanged".}
proc fcQIntValidator_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QIntValidator_tr2".}
proc fcQIntValidator_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QIntValidator_tr3".}
proc fcQIntValidator_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QIntValidator_trUtf82".}
proc fcQIntValidator_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QIntValidator_trUtf83".}
proc fQIntValidator_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QIntValidator_virtualbase_metacall".}
proc fcQIntValidator_override_virtual_metacall(self: pointer, slot: int) {.importc: "QIntValidator_override_virtual_metacall".}
proc fQIntValidator_virtualbase_validate(self: pointer, param1: struct_miqt_string, param2: ptr cint): cint{.importc: "QIntValidator_virtualbase_validate".}
proc fcQIntValidator_override_virtual_validate(self: pointer, slot: int) {.importc: "QIntValidator_override_virtual_validate".}
proc fQIntValidator_virtualbase_fixup(self: pointer, input: struct_miqt_string): void{.importc: "QIntValidator_virtualbase_fixup".}
proc fcQIntValidator_override_virtual_fixup(self: pointer, slot: int) {.importc: "QIntValidator_override_virtual_fixup".}
proc fQIntValidator_virtualbase_setRange(self: pointer, bottom: cint, top: cint): void{.importc: "QIntValidator_virtualbase_setRange".}
proc fcQIntValidator_override_virtual_setRange(self: pointer, slot: int) {.importc: "QIntValidator_override_virtual_setRange".}
proc fQIntValidator_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QIntValidator_virtualbase_event".}
proc fcQIntValidator_override_virtual_event(self: pointer, slot: int) {.importc: "QIntValidator_override_virtual_event".}
proc fQIntValidator_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QIntValidator_virtualbase_eventFilter".}
proc fcQIntValidator_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QIntValidator_override_virtual_eventFilter".}
proc fQIntValidator_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QIntValidator_virtualbase_timerEvent".}
proc fcQIntValidator_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QIntValidator_override_virtual_timerEvent".}
proc fQIntValidator_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QIntValidator_virtualbase_childEvent".}
proc fcQIntValidator_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QIntValidator_override_virtual_childEvent".}
proc fQIntValidator_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QIntValidator_virtualbase_customEvent".}
proc fcQIntValidator_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QIntValidator_override_virtual_customEvent".}
proc fQIntValidator_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QIntValidator_virtualbase_connectNotify".}
proc fcQIntValidator_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QIntValidator_override_virtual_connectNotify".}
proc fQIntValidator_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QIntValidator_virtualbase_disconnectNotify".}
proc fcQIntValidator_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QIntValidator_override_virtual_disconnectNotify".}
proc fcQIntValidator_delete(self: pointer) {.importc: "QIntValidator_delete".}
proc fcQDoubleValidator_new(): ptr cQDoubleValidator {.importc: "QDoubleValidator_new".}
proc fcQDoubleValidator_new2(bottom: float64, top: float64, decimals: cint): ptr cQDoubleValidator {.importc: "QDoubleValidator_new2".}
proc fcQDoubleValidator_new3(parent: pointer): ptr cQDoubleValidator {.importc: "QDoubleValidator_new3".}
proc fcQDoubleValidator_new4(bottom: float64, top: float64, decimals: cint, parent: pointer): ptr cQDoubleValidator {.importc: "QDoubleValidator_new4".}
proc fcQDoubleValidator_metaObject(self: pointer, ): pointer {.importc: "QDoubleValidator_metaObject".}
proc fcQDoubleValidator_metacast(self: pointer, param1: cstring): pointer {.importc: "QDoubleValidator_metacast".}
proc fcQDoubleValidator_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QDoubleValidator_metacall".}
proc fcQDoubleValidator_tr(s: cstring): struct_miqt_string {.importc: "QDoubleValidator_tr".}
proc fcQDoubleValidator_trUtf8(s: cstring): struct_miqt_string {.importc: "QDoubleValidator_trUtf8".}
proc fcQDoubleValidator_validate(self: pointer, param1: struct_miqt_string, param2: ptr cint): cint {.importc: "QDoubleValidator_validate".}
proc fcQDoubleValidator_setRange(self: pointer, bottom: float64, top: float64, decimals: cint): void {.importc: "QDoubleValidator_setRange".}
proc fcQDoubleValidator_setBottom(self: pointer, bottom: float64): void {.importc: "QDoubleValidator_setBottom".}
proc fcQDoubleValidator_setTop(self: pointer, top: float64): void {.importc: "QDoubleValidator_setTop".}
proc fcQDoubleValidator_setDecimals(self: pointer, decimals: cint): void {.importc: "QDoubleValidator_setDecimals".}
proc fcQDoubleValidator_setNotation(self: pointer, notation: cint): void {.importc: "QDoubleValidator_setNotation".}
proc fcQDoubleValidator_bottom(self: pointer, ): float64 {.importc: "QDoubleValidator_bottom".}
proc fcQDoubleValidator_top(self: pointer, ): float64 {.importc: "QDoubleValidator_top".}
proc fcQDoubleValidator_decimals(self: pointer, ): cint {.importc: "QDoubleValidator_decimals".}
proc fcQDoubleValidator_notation(self: pointer, ): cint {.importc: "QDoubleValidator_notation".}
